@@ -86,6 +86,7 @@ CVS HEAD:
      (forum thread 5659)
    * better diagnostics on parsing: file inclusion sequence
    * added [scroll_to] (patch #3388, forum thread 3235)
+   * added [advancefrom] (patch #3625, forum thread ??? )
  * editor improvements:
    * fixed editor file chooser when starting directory has many files (#11698)
    * made the starting position in editor start at player 1 (#10625)
